--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 <!--        <module>lab-38</module>-->
 <!--        <module>lab-39</module>-->
 <!--        <module>lab-40</module>-->
-<!--        <module>lab-41</module>-->
+        <module>lab-41</module>
 <!--        <module>lab-42</module>-->
 <!--        <module>lab-43</module>-->
 <!--        <module>lab-44</module>-->
